- add more error checking for missing products/categories/reviews
- add custom getAllHeaders method as getallheaders is not available for
  FastCGI or non apache httpd
- move all store code into store/lib to follow MVC folder layout
- add ZMDefaultSeoRewriter class as default default
- resolve database mapping filename relative to the configured application
  path rather than installation path

Release 0.9.8
- add Savant3 and experimental views (not used yet)
- fix forward view bug; b:#2880154
- fix error in SACS manager that breaks automatic redirects to secure pages
  where configured
- more changes to use $request where possible
- zm_quick_edit: allow non form widgets, for example read only data
- add custom SavantView and start using (regular pages, popups, forward,
  redirect, plugin, function views)
- update email view to extending SavantView; views now need a relative path
  with the views folder as base
- fix bug in KeepItSimple theme's local.php; b:#2879221
- fix bug in ZMFileUtils; b:#2880149
- fix file permission bug; b:#2880151
- update theme infos and add preview images
- allow to set custom preview image with ZMThemeInfo::setPreview('image');
  default is 'preview.jpg'
- zm_theme_switch: if no config setting is found, display all existing themes
- modify plugin build script to make plugins.properties only file to be
  changed for new plugins (except new groups)
- change plugins build script to generate a zip of all released plugins (this
  only makes sense if all plugins are released all the time)
- move template variable container from controller to view; drop
  exportGlobal() and getGlobal()/getGlobals() from ZMController
- adjust controller settings to follow core/mvc naming pattern
- refactor toolbox code; allow custom tools via setting; migrate code to
  require $request as parameter for the instance() method (any other
  suggestions?)
- zm_wordpress: do observe the syncUser flag